# gaea

./: .env  .env.example  .gitignore  .project-context.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SWITCHING_PLAN.md  TAURI_MIGRATION_ANALYSIS.md  TIANXUAN.md  V8.0-ARCHITECTURE.md  cli.ts  db.example.json  db_layer.ts  dev.ps1  docker-compose.yml  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  gaea-v0-17-0-release.md  gaeaW-v0-13-1-release.md  gaeaW.example.toml  gaeaW.toml  gaea_model_config_example.json  gaea_model_config_schema.json  gaeaw-v0-13-0-release.md  gaeaw-v0-13-2-release.md  go.mod  index.html  index.org.html  launcher.ts  metadata.json  package-lock.json  package.json  (+5 more)
.codegraph/: codegraph.db-shm  daemon.pid
.tianxuan/: progress.md
benchmarks/: round_01.txt  round_02.txt  round_03.txt  round_04.txt  round_05.txt  round_06.txt  round_07.txt  round_08.txt  round_09.txt  round_10.txt  round_11.txt  round_12.txt  round_13.txt  round_15.txt  round_16.txt  round_17.txt  round_18.txt  round_19.txt  round_20.txt  round_22.txt  round_23.txt  round_24.txt  round_26.txt  round_27.txt  round_28.txt  round_30.txt  v4.0-30r.json  v58-run1.txt  v58-run2.txt  v59-10r.txt  v59-subagent.txt
desktop/: DESIGN.md  README.md  app.go  app_image.go  app_mcp.go  app_meta.go  app_session.go  app_submit.go  app_workspace.go  build.ps1  crash_pending.go  go.mod  main.go  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+869 files in other folders)
